# viewer

./: Cargo.toml  README.adoc  index.html  manifest.json  sw.js  viewer.js
ftl/en/: settings.ftl
ftl/ru/: settings.ftl
src/: localization.rs  main.rs
src/app/: data.rs  mod.rs  mqtt.rs
src/app/computers/: plot.rs
src/app/panes/: behavior.rs  mod.rs  pane.rs  plot.rs  state.rs  table.rs
src/app/panes/settings/: mod.rs  plot.rs  table.rs
